Host and client can access CreatePlayers-Layout in a local and online game.